--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nextjs-tailwind-event-landing-page",
+  "name": "GoodsGate",
   "version": "1.0.0",
   "private": true,
   "author": "Creative Tim",
   "license": "See license in https://www.creative-tim.com/license",
-  "homepage": "https://demos.creative-tim.com/nextjs-tailwind-event-landing-page",
+  "homepage": "https://demos.creative-tim.com/GoodsGate",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,8 +14,8 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
+    "GoodsGate": "file:",
     "next": "^14.2.10",
-    "nextjs-tailwind-event-landing-page": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
